
2007-12-22  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: License line is already mandatory for 'hylafax'.

	* registry/theregistry.dtd: Add the <package> element, remove the
	dead <http> and <see> elements, tweak comments and whitespace.

2007-12-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Add a check for the license line:
	an initial comment line that states the license of the PO file.

2007-12-17  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/maintainers.all: The maintainers' page rewritten.

2007-12-08  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Make sure stored PO files are group-writable.

	* bin/po-register: Make a logbook entry when a PO file is stored.

2007-12-07  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/run-queue.sh: Exit immediately if there is no robot queue.

	* bin/tp-robot: Reject PO file when less than half is translated.

2007-12-02  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: A normal version number is _not_ a beta version:
	make 0.10.14.5 sort after 0.10.14, not before, for gst-plugins-base.

2007-11-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Add on the team pages hyperlinks to the PO files.

2007-11-07  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/whydisclaim.html: Remove paragraph about non-existent PDF;
	suggested by Karl Berry.

2007-10-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/htmlpage.py: Add a transform_authors() function to process
	the AUTHORS file into a simple HTML list of names and dates.

2007-10-14  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Allow team leaders to upload PO files for any domain.

	* bin/po-register: Show in the subject line the name of the actual
	last translator instead of the assigned translator.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Clarify things when team has no leader.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>
